# claude-code-hedge-fund

./: .env.example  .gitignore  AAPL.html  AGENTS.md  AMD.html  AMZN.html  ARCHITECTURE.md  BAC.html  CLAUDE.md  CVX.html  DIS.html  GOOG.html  GS.html  HANDOFF.md  IWM.html  JNJ.html  JPM.html  META.html  MSFT.html  MU.html  NKE.html  NVDA.html  PFE.html  QQQ.html  README.md  RUN_PLAYBOOK.md  SNDK.html  SPY.html  STX.html  TSLA.html  UNH.html  WDC.html  WMT.html  XOM.html  closed.html  index.html  pyproject.toml  routines-page-snapshot.yml  runs.html  today.html
.archive/crypto/: README.md
.github/workflows/: auto-merge-routine-branches.yml  dashboard.yml
ai_hedge/: CLAUDE.md  cli.py  schemas.py
ai_hedge/data/: api.py  cache.py  earnings_calendar.py  indicators.py
ai_hedge/wiki/: inject.py  (+5 more)
crypto_tracker/: db.py  reporter.py  sim_client.py  watchlist.json
dashboard/: build.py
opend/: OpenD.xml.example
runs/: summary_swing_batch2_20260422.md
scripts/: all_swing_predictions.json  architecture_audit.md  audit_wiki_trades.py  build_routine_v2.py  build_swing_dataset.py  check_docs_drift.py  migrate_to_turso.py  research_prompt_routines.md  routine_failures.md  routine_failures.py  routine_raw_results.json  routine_raw_results_v2.json  swing_audit.py  swing_audit_crypto.md  swing_audit_stock.md  swing_routine_backtest.py  swing_routine_report.md  wiki_audit_report.md  wiki_bootstrap.py  wiki_compactor.py  wiki_lint_report.md  wiki_memory_plan.md
tests/: test_explainer.py  test_grading_grader.py  test_grading_loader.py  test_migrate_to_turso.py  test_turso_client.py
tracker/: CLAUDE.md  TRADE_LOG.md  TRADING_LOG.md  __main__.py  backtest.py  cli.py  db.py  executor.py  ingest_decisions.py  ingested_runs.txt  monitor.py  moomoo_client.py  price_watcher.py  reporter.py  simulator.py  spy_benchmark.py  swing_predictions.json  turso_client.py  watchlist.json  wiki_daily_update.py  wiki_ledger_export.py  wiki_open_positions_update.py
wiki/: INDEX.md  LOG.md  README.md  _bootstrap_manifest.json
(+2307 files in other folders)
