[project]
name = "ai-hedge-fund"
version = "0.1.1"
description = "AI hedge fund analysis as Claude Code slash commands. 30+ AI investor personas analyze stocks."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Naman Vinayak"}
]
keywords = ["claude-code", "skill", "hedge-fund", "stock-analysis", "ai-investing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "pydantic>=2.4.2",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.22",
    "colorama>=0.4.6",
    "questionary>=2.0.0",
    "finnhub-python>=2.4.20",
    "langchain-core>=0.1.0",
]

[project.optional-dependencies]
extras = ["pandas_ta"]

[project.urls]
Homepage = "https://github.com/NamanVinayak/ai-hedge-fund"
Repository = "https://github.com/NamanVinayak/ai-hedge-fund"

[project.scripts]
ai-hedge-fund = "ai_hedge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_hedge*"]

[tool.setuptools.package-data]
ai_hedge = [
    "personas/prompts/*.md",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
